Fix horizontal scrolling issues with css

--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ main img {
 }
 
 main iframe {
-    padding: 20px;
+    margin: 20px 0;
     max-width: 100%;
     height: auto;
     aspect-ratio: 16/9; /* 16:9 aspect ratio for YouTube videos */
